--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     
-    "name": "Ari-Ani",
+    "name": "Yuji Bot",
     "description": "A WhatsApp Bot With Rich NSFW Features based on chitoge.",
     "keywords": [
         "bot",
@@ -13,7 +13,7 @@
         "whatsapp-botto"
     ],
     "website": "https://github.com/Eximinati/Ari-Ani#readme",
-    "repository": "https://github.com//Eximinati/Ari-Ani.git",
+    "repository": "https://github.com/hackeryuji67/Ari-Ani.git",
     "logo": "https://telegra.ph/file/75368c6fe4abb9d0f2bb9.png",
     "success_url": "/",
     "env": {
